add text to the language file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,9 @@ en:
       footer_address_txt: "Holanda 895, Providencia, Santiago"
     navbar_signin:
       sign_in: "Sign in"
+      methodology: "Methodology"
+      testimonies: "Testimonies"
+      estratega_users: "Estratega Users"
     sign_in:
       mail: "E-mail"
       password: "Password"
@@ -52,14 +55,29 @@ en:
       button_demo: "Demo"
       button_read_more: "I want to read more about it"
       testimony: "Testimonies"
+      testimony1_cite: "me ha servido para identificar y ponderar todos los factores que influyen en el éxito"
       testimony1_txt: "Estratega fue el comienzo para abordar el tema de incidencia de forma profesional y con sentido. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia dónde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
       testimony1_signer: "José Manuel Tapia, Coordinador de Extensión CIS TECHO - Chile"
+      testimony2_cite: "fue el comienzo para abordar el tema de incidencia de forma profesional y con sentido"
       testimony2_txt: "Con Estratega he observado cómo intenciones se traducen en objetivos de política pública definidos y concretos, con indicadores de éxito y un itinerario de acciones claro que orienta la acción de incidencia. Esto nos ha permitido priorizar los objetivos y distribuir los esfuerzos de la organización"
       testimony2_signer: "Octavio Del Favero, Coordinador Legislativo Fundación Ciudadano Inteligente"
+      testimony3_cite: "nos ha permitido priorizar los objetivos y distribuir los esfuerzos de la organización"
       testimony3_txt: "Estratega me ha servido para identificar y ponderar todos los factores que influyen en el éxito de una planificación de incidencia teniendo muy claro qué es lo que se quiere conseguir. Esto nos ha permitido planificar con el nivel de detalle y orden cronológico que requiere el logro de cada uno de nuestros objetivos"
       testimony3_signer: "Danae Fuentes, Encargada de Incidencia en Políticas Públicas Hogar de Cristo"
       title_orgs: "Estratega Users"
       guest_main_txt: "Ensure your impact by planning chain actions"
+      ask_1: "¿Tienes objetivos de acción claros pero no logras cumplirlos?"
+      ask_2: "¿No logran conectar con los actores sociales con los que te deberías relacionar?"
+      ask_3: "¿Tu presupuesto organizacional es escaso y necesitas optimizarlo de la mejor manera?"
+      ask_4: "¿Existe alta rotación en los miembros de tu organización?"
+      ask_5: "¿Tus flujos de comunicación interna y externa trabajan en función de tu meta institucional?"
+      methodology_title: "Metodología"
+      methodology_step_1: "Caracterizar el problema público"
+      methodology_step_2: "Definir objetivos"
+      methodology_step_3: "Analizar factores externos"
+      methodology_step_4: "Definir resultados intermedios"
+      methodology_step_5: "Planificar peticiones"
+      methodology_step_6: "Evaluación monitoreo"
       sign_up: "Sign up"
       email_placeholder: "Email"
       password_placeholder: "Password"
