--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
       methodology: "Methodology"
       testimonies: "Testimonies"
       estratega_users: "Estratega Users"
+      language: "Language"
     sign_in:
       mail: "E-mail"
       password: "Password"
