--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
       sign_in: "Sign in"
       forgot_password: "Forgot your password?"
     footer:
-      estratega_description: "Estratega is a methodology and tool designed to focus your organization’s advocacy planning, monitoring, and evaluation"
+      estratega_description: "Estratega is a methodology and tool designed for your organization’s advocacy planning, monitoring, and evaluation"
       contact: "Contact"
       mail: "Mail"
       mailing_adress: "lab@ciudadanointeligente.org"
@@ -100,10 +100,10 @@ en:
       actions: "Actions"
       public: "Public project"
       guide_me: "Guide Me"
-      step_one: "To begin working we create a <strong>New Project</strong>"
-      step_two: "In these tabs you will see the projects in which you work <strong>(My project)</strong> and shared community projects <strong>(Other projects)</strong>"
-      step_three: "To get started on the project you can click on the name or select one of the functions of the column <strong>Actions</strong>"
-      config: "Config the project"
+      step_one: "To begin working you must create a <strong>New Project</strong>"
+      step_two: "In these tabs you will see the projects in which you are working <strong>(My projects)</strong> and shared community projects <strong>(Other projects)</strong>"
+      step_three: "To get started on the project click on the name or select one of the functions of the column <strong>Actions</strong>"
+      config: "Configure the project"
       share: "Share the project"
       edit: "Edit"
       overview: "Overview"
@@ -141,8 +141,8 @@ en:
       step2_description: "Identify the causes of the problem"
       step3_description: "Formulate political solutions for the causes the problem"
       step4_description: "Define and prioritize policy objectives"
-      step_one: "Once the project page you will see 3 tabs. In <strong>Stages</strong> are the stages of data entry, <strong>Dashboard</strong> will show indicators of success and progress , will be the <strong>Documents</strong> library of important documents , and finally <strong>Overview</strong> showing the summary of all the information entered"
-      step_two: "Let's start with the advocacy plan by completing the information requested in the <strong>Stage 1</strong>"
+      step_one: "Once you open the project page you will see 4 tabs. The <strong>Stages</strong> are the steps of data entry, in the <strong>Dashboard</strong> indicators of success and progress will be shown, in <strong>Documents</strong> a library of important documents , and finally in<strong>Overview</strong> a summary of all the information entered will be shown"
+      step_two: "Let's start with the advocacy plan by completing the information requested in <strong>Stage 1</strong>"
       step_three: "These icons show you the 3 states of data entry. They'll tell you if you need to fill a previous step (<i class='fa fa-lock'></i>), if they are ready to income (<i class='fa fa-unlock'></i>) or it contains information (<i class='fa fa-check'></i>)"
       section1_title: "Stage 1: Understand the problem you want to face"
       section2_title: "Stage 2: Plan your strategy"
@@ -274,15 +274,15 @@ en:
     stage1:   # http://localhost:3000/projects/1/stage1
       projects: "Projects"
       stage1: "Stage 1"
-      title: "What problems you want to address? What policy change you aim to achieve?"
+      title: "What problems you want to address? What policy change do you aim to achieve?"
       description: "The foundation of an effective advocacy strategy is a common understanding of the main problems that affect children, their policy dimensions and related policy solutions. It is important you take time to go through this discussion because without a clear, articulated issue and well-defined problems and solutions the remaining parts of the strategy will lose focus."
-      subtitle1: "Which real-world problem that people are facing do you want to address?"
-      subtitle1_tooltip: "A real-world problem is the negative situation people face that you intend to change. It should describe the geographical scope, a time period, and population affected."
+      subtitle1: "What real-world problem do you want to address?"
+      subtitle1_tooltip: "A real-world problem is a situation people face that you intend to change. It should describe the geographical scope, a time period, and the affected population."
       subtitle1_explanation: "A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"
-      subtitle2: "Which are the policy-related causes of the real-world problem?"
-      subtitle2_tooltip: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
+      subtitle2: "Which are the policy-related causes behind the real-world problem?"
+      subtitle2_tooltip: "Behind the real-world problems there are usually multiple causes, including causes related to programs, bad practices or to the policymaking environment. Advocacy work focuses specifically on the lattest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
       subtitle3: "Which policy solutions would constitute an appropriate response?"
-      subtitle3_tooltip: "What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?"
+      subtitle3_tooltip: "What are the main policy solutions that would resolve the problems identified and that you would like to see adopted?"
       problem: "Problem"
       problem_description: "Description"
       focus_area: "Focus Area"
@@ -294,33 +294,33 @@ en:
       policies_text: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
       error_focus_area: "Error while getting focus area information"
       error_project: "Error while getting the project information"
-      error_policy_problems: "Error while getting policy problems information"
-      error_solutions: "Error while getting solutions information"
-      error_solution: "Error while getting a solution information"
+      error_policy_problems: "Error while getting policy problem information"
+      error_solutions: "Error while getting information about the solution"
+      error_solution: "Error while getting information about the solution"
       error_updating: "Error while updating information"
-      error_insert: "Error while insert information"
-      error_updating_policy: "Error while updating a policy information"
-      error_creating_policy: "Error while creating a policy information"
-      error_updating_solution: "Error while updating a solution information"
-      error_creating_solution: "Error while creating a solution information"
+      error_insert: "Error while inserting information"
+      error_updating_policy: "Error while updating policy information"
+      error_creating_policy: "Error while creating policy information"
+      error_updating_solution: "Error while updating information about the solution"
+      error_creating_solution: "Error while creating information about the solution"
       error_getting_policy: "Error while getting the policy problem information"
       confirm_delete_solution: "Are you sure you want to delete this solution?"
       confirm_delete_policy: "Are you sure you want to delete this policy problem?"
       guide_me: "Guide me"
-      step_one: "At all stages we find these 2 sections. <strong>Data entry</strong> will give us the opportunity to enter information into the system and <strong>Explanation & Examples</strong> will explain what each step."
-      step_two: "To add information press <i class='fa fa-plus-circle'></i> <strong>Add</strong>, if you want information guide takes the pointer over the <i class='fa fa-info'></i> button. Once entered the data, you only have to press <i class='fa fa-pencil'></i> <strong>Edit</strong> to modify the information"
+      step_one: "During all stages you will find these 2 sections. <strong>Data entry</strong> that will give us the opportunity to enter information into the system and <strong>Explanation & Examples</strong> that will explain what each step."
+      step_two: "To add information press <i class='fa fa-plus-circle'></i> <strong>Add</strong>, if you want information guide press <i class='fa fa-info'></i> button. Once the data is entered, you only have to press <i class='fa fa-pencil'></i> <strong>Edit</strong> to modify the information"
       step_three: "Now add <strong>Policy Problems</strong>, they group <strong>Policy Solution</strong>"
       step_four: "To go back to the index page (previous), press the link with the name of your project"
     policy_modal: # modal `add policy` of stage 1
-      policy: "Cuases"
+      policy: "Causes related to public policy"
       title: "Title"
       title_placeholder: "Describe the cause"
       save_button: "Save"
       cancel_button: "Cancel"
     solution_modal:  # modal `add solution` of stage 1
-      solution: "Solution"
+      solution: "Public Policy Solution"
       title: "Title"
-      title_placeholder: "Describe "
+      title_placeholder: "Describe"
       save_button: "Save"
       cancel_button: "Cancel"
     explanation:  #tab `Explanation & Examples` of stage 1
