--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,8 +52,8 @@ en:
       main_txt: "Benefits"
       sentence_resources: "Effective use for your resources"
       sentence_risks: "Maximize opportunities and minimize risks"
-      sentence_advocacy: "Align advocacy with other areas and organization goals, both long and short term"
-      sentence_keep_track: "Keep track and evaluate your performance"
+      sentence_advocacy: "Align your advocacy strategy with other areas and organization goals, both on a long and short term"
+      sentence_keep_track: "Keep track and evaluate the performance of your team"
       button_demo: "Demo"
       button_read_more: "I want to read more about it"
       testimony: "Testimonies"
@@ -68,18 +68,18 @@ en:
       testimony3_signer: "Danae Fuentes, Encargada de Incidencia en Políticas Públicas Hogar de Cristo"
       title_orgs: "Estratega Users"
       guest_main_txt: "Ensure your impact by planning chain actions"
-      ask_1: "¿Tienes objetivos de acción claros pero no logras cumplirlos?"
-      ask_2: "¿No logran conectar con los actores sociales con los que te deberías relacionar?"
-      ask_3: "¿Tu presupuesto organizacional es escaso y necesitas optimizarlo de la mejor manera?"
-      ask_4: "¿Existe alta rotación en los miembros de tu organización?"
-      ask_5: "¿Tus flujos de comunicación interna y externa trabajan en función de tu meta institucional?"
-      methodology_title: "Metodología"
-      methodology_step_1: "Caracterizar el problema público"
-      methodology_step_2: "Definir objetivos"
-      methodology_step_3: "Analizar factores externos"
-      methodology_step_4: "Definir resultados intermedios"
-      methodology_step_5: "Planificar peticiones"
-      methodology_step_6: "Evaluación monitoreo"
+      ask_1: "Do you have clear action objectives but never seem to reach them?"
+      ask_2: "Do you have trouble connecting with the key actors?"
+      ask_3: "Is your organisational budget quite limited and you need to optimize every available resource?"
+      ask_4: "Do you have a high personnel turnover?"
+      ask_5: "Is your internal and external communication aligned with your institutional goals?"
+      methodology_title: "Methodolgy"
+      methodology_step_1: "Define the Public Problem"
+      methodology_step_2: "Define Objectives"
+      methodology_step_3: "Analyze external factors"
+      methodology_step_4: "Define intermediate results"
+      methodology_step_5: "Plan Petitions"
+      methodology_step_6: "Evaluation Monitoring"
       sign_up: "Sign up"
       email_placeholder: "Email"
       password_placeholder: "Password"
