javascript messages and buttons translations

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -5,14 +5,30 @@ es:
   js_texts:
     add: "Añadir"
     edit: "Editar"
-    percentage: "Percentage must be a valid number"
-    indicator_updated: "Indicator updated"
-    error_updating: "Error updating"
-    indicator_added: "Indicator added"
-    indicator_create_error: "Error creating indicator"
+    percentage: "El porcentaje debe ser un número válido"
+    indicator_updated: "Indicador actualizado"
+    error_updating: "Error actualizando"
+    indicator_added: "Indicador añadido"
+    indicator_create_error: "Error creando indicador"
     event_ext: "Evento Externo"
     event_org: "Evento de la Organización"
     error_edit_msg: "Error editando mensaje"
+    error_update_msg: "Error actualizando mensaje"
+    error_save_msg: "Error guardando mensaje"
+    delete_confirmation: "¿Estás absolutamente seguro de que quieres eliminar?"
+    error_getting_projects: "Error obteniendo proyectos."
+    error_public_projects: "Error obteniendo proyectos públicos."
+    project_updated: "Proyecto actualizado!"
+    project_update_error: "Error actualizando proyecto!"
+    project_created: "Proyecto creado!"
+    error_get_data: "Error obteniendo datos!!!"
+    project_deleted: "Proyecto borrado!"
+    project_delete_error: "Error borrando proyecto!"
+    shared: "Compartido"
+    share_error: "Error compartiendo"
+    colaborator_delete_confirmation: "¿Estas seguro de eliminar este colaborador?"
+    unlinking_error: "Error desvinculando usuario!"
+    shared_project_delete_confirmation: "Este es un proyecto compartido, ¿Estas seguro de eliminarlo?"
   layouts:
     landing:
       meta_description: "Estratega, una herramienta de advocacy"
